--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -2,6 +2,7 @@ fastapi==0.63.0
 uvicorn==0.13.4
 elasticsearch==7.12.0
 elasticsearch-async==6.2.0
+elasticsearch-dsl==7.3.0
 aioredis==1.3.1
 pydantic==1.8.1
 orjson==3.5.3
