--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,5 +1,18 @@
 version: '3'
 services:
+  nginx:
+    image: nginx:1.19.2
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - ./nginx/site_configs:/etc/nginx/conf.d:ro
+    networks:
+      - movies-api-network
+    ports:
+      - 8000:80
+    depends_on:
+      - async_api
+    restart: unless-stopped
+
   redis:
     image: redis:6.0.9
     ports:
@@ -13,15 +26,13 @@ services:
   async_api:
     container_name: async_api
     build:
-      context: .
-    ports:
-      - 8000:8000
+      context: ./src/
     environment:
       PROJECT_NAME: "Movies API"
       REDIS_HOST: redis
       REDIS_PORT: 6379
-      ELASTIC_HOST: 127.0.0.1
-      ELASTIC_PORT: 9200
+      ELASTIC_HOST:  # get this from .env
+      DEV:  # get this from .env
     networks:
       - movies-api-network
     depends_on:
