--- a/docker-compose.tests.yaml
+++ b/docker-compose.tests.yaml
@@ -20,17 +20,34 @@ services:
     extends:
       file: docker-compose.yaml
       service: async_api
+    volumes:
+    - ./tests:/opt/app/tests
     environment:
       DEV: 'true'
       PYTHONUNBUFFERED: 1
       PYTHONPATH: /opt/app/tests
       SERVICE_URL: async_api:8000
+      path.repo:
     entrypoint: >
       sh -c "pip install -r tests/functional/requirements.txt
       && python tests/functional/utils/wait_for_es.py
       && python tests/functional/utils/wait_for_redis.py
       && pytest ./tests/functional/src"
     restart: 'no'
+  tests_es:
+    image: docker.elastic.co/elasticsearch/elasticsearch:7.12.1
+    container_name: tests_es
+    networks:
+      - movies-api-network
+    ports:
+      - 9201:9200
+    environment:
+      discovery.type: single-node
+      path.repo:
+    volumes:
+      - ./tests/functional/testdata:/usr/share/elasticsearch/backup
+    restart: always
+
 
 networks:
   movies-api-network:
